# coach-trusted

./: .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.local.yml  docker-compose.production.yml  docker-compose.yml  justfile  manage.py  pyproject.toml  requirements.txt
.envs/.local/: .django  .postgres
.github/workflows/: ci.yml  deployment.yml
authentication/: firebase.py  serializers.py  urls.py  views.py
authentication/tests/test_views/: test_login_view.py  test_login_with_google_view.py  test_refresh_token_view.py  test_register_confirmation_view.py  test_register_view.py  test_resend_verification_code_view.py  test_validate_token_view.py
blogs/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
blogs/migrations/: 0001_initial.py  0002_category_post_image_post_slug_post_status_and_more.py
coach/: admin.py  apps.py  filters.py  models.py  signals.py  tasks.py  urls.py  views.py
coach/migrations/: 0001_initial.py  0002_alter_coach_user_claimcoachrequest.py  0003_coachreview.py  0004_rename_firs_name_coachreview_first_name.py  0005_rename_name_coach_first_name_coach_last_name.py  0006_socialmedialink.py  0007_category_subcategory.py  0008_coach_category_coach_subcategory.py  0009_subcategory_category.py  0010_coachmedia.py  0011_coach_about.py  0012_alter_coach_about.py  0013_alter_coach_about.py  0014_coach_title.py  0015_coach_company.py  0016_coach_city_coach_country_coach_street_no_and_more.py  0017_alter_coach_type.py  0018_alter_coach_phone_number.py  0019_category_icon_subcategory_icon.py  0020_coach_review_status.py  0021_alter_coach_cover_image.py
coach/serializers/: __init__.py  category.py  claim_coach_request.py  coach.py  coach_media.py  coach_review.py  saved_coach.py  social_media_link.py
coach/tests/: factories.py
coach/tests/test_models/: test_category.py  test_claim_coach_request.py  test_coach.py  test_coach_media.py  test_coach_review.py  test_saved_coach_model.py  test_social_media_link.py  test_subcategory.py
coach/tests/test_views/: test_category_list_api_view.bak  test_claim_coach_request_create_api_view.py  test_coach_list_api_view.py  test_coach_retrieve_update_api_view.py  test_coach_review_create_api_view.py  test_coach_review_list_api_view.py  test_create_saved_coach_api_view.py  test_saved_coach_add_api_view.py  test_saved_coach_delete_api_view.py  test_saved_coach_list_api_view.py  test_social_media_links_api_view.py  test_subcategory_list_api_view.bak
compose/local/django/: start
compose/production/django/: Dockerfile  start
compose/production/nginx/: default.conf
compose/production/traefik/: traefik.yml
config/: apps.py  asgi.py  celery_app.py  celery_beat_admin.py  ckeditor.py  settings.py  sidebar.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
core/templates/: base.html
core/users/: admin.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
core/users/api/: serializers.py
core/users/migrations/: 0004_verificationcode.py  (+6 more)
docs/: conf.py  index.rst
events/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
events/migrations/: 0001_initial.py  0002_savedevent.py  0003_event_is_featured_event_short_description.py
events/tests/: factories.py
firebasejson/: firebase.json
inquiries/: admin.py  models.py  serializers.py  urls.py  views.py
inquiries/migrations/: 0001_initial.py  0002_alter_generalinquiry_phone.py
inquiries/tests/: factories.py
notifications/: admin.py  models.py  paginations.py  serializers.py  urls.py  views.py
notifications/migrations/: 0001_initial.py
notifications/tests/: factories.py
products/: admin.py  filters.py  models.py  serializers.py  signals.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_savedproduct.py  0003_product_is_featured.py  0004_producttype_product_product_type.py  0005_remove_producttype_language_product_language.py  0006_product_external_url_product_release_date.py  0007_product_ct_id_product_product_id.py
products/tests/: factories.py
quizzes/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
quizzes/migrations/: 0001_initial.py  0002_alter_fields_description.py  0003_alter_fields_description.py  0004_remove_quiz_coach_category_quiz_category_and_more.py
quizzes/tests/: factories.py  test_signals.py  test_tasks.py
requirements/: base.txt  local.txt  production.txt
scripts/: arter.py  create_category_data.py  restore_coach_data.py
scripts/data/: coach.csv
settings/: admin.py  models.py  serializers.py  urls.py  views.py
settings/migrations/: 0001_initial.py
(+29 files in other folders)
